# TrendSage

./: .cursorrules  .gitignore  README.md  new_output.txt  ouput3.txt  output.txt  pyproject.toml  requirements.txt
.github/workflows/: backend-deploy.yml
backend/: check_function.py  crew.py  run.py  test_db.py
backend/api/: chat.py  main.py  router.py
backend/cache/: Boston_Celtics_20250306210309.json  Nvidia_H100s_20250306220609.json
backend/config/: agents.yaml  logging_config.py
backend/database/: create_exec_sql_function.sql  fix_rls.sql  fix_workflow_cache_direct.sql  fix_workflow_cache_rls.sql  init_db.py  schema.sql  vector_setup.sql
backend/database/migrations/: 01_add_missing_columns.sql  02_complete_schema_update.sql
backend/scripts/: categorize_blogs.py  run_fix_rls.py  update_blog_images.py
backend/tools/: image_fetcher.py  memory_store.py  news_data_collection_tool.py  rag_tool.py  save_blog_post_tool.py  supabase_admin_client.py  supabase_client.py  trend_analyzer_tool.py  vector_embedding_tool.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/pricing/: page.tsx
frontend/components/: auth.tsx  blog-post.tsx  header.tsx  hero-section.tsx  theme-provider.tsx
frontend/components/ui/: loading-animation.tsx  theme-toggle.tsx
frontend/frontend/: package-lock 2.json  package-lock.json  package.json
frontend/lib/: api.ts  supabase.ts
frontend/src/: App.tsx
frontend/src/app/: layout.tsx  (+1 more)
src/mpcrew/: crew.py  main.py  output.txt  run.py
(+15 files in other folders)
